--- a/public-pool/Dockerfile
+++ b/public-pool/Dockerfile
@@ -1,5 +1,5 @@
 # Build backend
-FROM node:lts-bookworm as backend
+FROM node:lts-bookworm AS backend
 
 WORKDIR /app
 
@@ -12,7 +12,7 @@ RUN git clone https://github.com/AnimaI/public-pool.git . && \
 COPY .env.tpl /app/.env.tpl
 
 # Build frontend
-FROM node:lts-bookworm as frontend
+FROM node:lts-bookworm AS frontend
 
 WORKDIR /build
 
@@ -26,22 +26,17 @@ COPY proxy.config.local.json.tpl proxy.config.prod.json.tpl /build/
 COPY environment.ts.tpl environment.prod.ts.tpl /build/src/environments/
 
 # Final image
-FROM node:lts-bookworm
+FROM node:lts-bookworm AS final
 
 WORKDIR /app
 
-# Backend
+# Backend + Frontend übernehmen
 COPY --from=backend /app /app
-
-# UI static build
 COPY --from=frontend /build/dist/public-pool-ui /app/ui
-
-# TPLs die entrypoint.sh braucht
 COPY --from=frontend /build/proxy.config.*.tpl /app/ui/
 COPY --from=frontend /build/src/environments/*.tpl /app/ui/src/environments/
-
-# Entrypoint
 COPY entrypoint.sh /entrypoint.sh
+
 RUN chmod +x /entrypoint.sh
 
 EXPOSE 3333 3334 8080
