--- a/.github/workflows/build_bitcoind.yml
+++ b/.github/workflows/build_bitcoind.yml
@@ -62,4 +62,5 @@ jobs:
           --platform $(cat PLATFORMS | tr '\n' ',') \
           --build-arg VERSION=${{ env.VERSION }} \
           --tag ${{ secrets.DOCKER_USERNAME }}/bitcoind:${{ env.VERSION }} \
+          --tag ${{ secrets.DOCKER_USERNAME }}/bitcoind:latest \
           --output "type=registry" .
