--- a/.github/workflows/build_bitcoind.yml
+++ b/.github/workflows/build_bitcoind.yml
@@ -55,7 +55,7 @@ jobs:
           | grep ${{ env.VERSION }}
       
       - name: Build multiarch and push to Docker Hub
-        if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
+        if: ${{ (github.event_name == 'push' && github.ref == 'refs/heads/master') || github.event_name == 'workflow_dispatch' }}
         run: |
           cd bitcoind
           docker buildx build \
